<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_choose_your_role"
        android:textSize="18sp" />

    <Button
        android:id="@+id/user_button"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user" />

    <Button
        android:id="@+id/assistant_button"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/become_an_assistant" />
</LinearLayout>