<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomePageActivity">

    <!-- Header Title (Top-Center) -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_home_page"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <!-- Dropdown Button (Top-Left) -->
    <Button
        android:id="@+id/dropdown_button_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/dropdown_button_left"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <!-- Profile Button (Top-Right) -->
    <Button
        android:id="@+id/profile_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/profile_button"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Status Text (Above Navigation Button) -->
    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_ready"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/start_navigation_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

    <!-- Centered Navigation Button -->
    <Button
        android:id="@+id/start_navigation_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/navigate"
        android:background="@drawable/circle_button"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintBottom_toTopOf="@id/footer_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <!-- Footer Info (Bottom-Center) -->
    <TextView
        android:id="@+id/footer_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_more_info_contact_support"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
